[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/GeneralControl.gd" type="Script" id=1]
[ext_resource path="res://Assets/Extra/marco_titulo.png" type="Texture" id=2]
[ext_resource path="res://Assets/Music/kim-lightyear-leave-the-world-tonight-chiptune-edit-loop-132102.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/Extra/boton.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/Game Of Squids.ttf"

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 2
outline_color = Color( 0.572549, 0.262745, 0.752941, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/Fonts/Game Of Squids.ttf"

[sub_resource type="DynamicFont" id=4]
size = 24
outline_size = 2
outline_color = Color( 0.384314, 0.117647, 0.635294, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/Fonts/Game Of Squids.ttf"

[sub_resource type="DynamicFont" id=6]
size = 25
outline_size = 2
outline_color = Color( 0.384314, 0.117647, 0.635294, 1 )
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/Fonts/Game Of Squids.ttf"

[sub_resource type="DynamicFont" id=8]
size = 22
outline_size = 2
outline_color = Color( 0.384314, 0.117647, 0.635294, 1 )
font_data = SubResource( 7 )

[node name="GeneralControl" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
z_index = 20

[node name="Fondo" type="NinePatchRect" parent="Sprite"]
modulate = Color( 0.890196, 0.176471, 0.933333, 1 )
margin_left = 697.0
margin_top = 360.0
margin_right = 1222.0
margin_bottom = 720.0
texture = ExtResource( 2 )
region_rect = Rect2( 80, 30, 344, 71 )
patch_margin_top = 11
patch_margin_bottom = 1

[node name="Panel" type="Panel" parent="Sprite/Fondo"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 170.0
margin_top = 102.0
margin_right = 480.0
margin_bottom = 122.0

[node name="HSlider" type="HSlider" parent="Sprite/Fondo"]
margin_left = 175.0
margin_top = 104.0
margin_right = 475.0
margin_bottom = 120.0
min_value = -80.0
max_value = 5.0
value = -10.0

[node name="Titulo" type="Label" parent="Sprite"]
modulate = Color( 0.541176, 0.113725, 0.615686, 1 )
margin_left = 893.0
margin_top = 397.0
margin_right = 1028.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 2 )
text = "PAUSA"

[node name="LabelSonido" type="Label" parent="Sprite"]
modulate = Color( 0.541176, 0.113725, 0.615686, 1 )
margin_left = 744.0
margin_top = 457.0
margin_right = 846.0
margin_bottom = 488.0
custom_fonts/font = SubResource( 4 )
text = "SONIDO"

[node name="Menu" type="TextureButton" parent="Sprite"]
modulate = Color( 0.533333, 0.0862745, 0.870588, 1 )
self_modulate = Color( 0.941176, 0.34902, 0.34902, 1 )
margin_left = 724.0
margin_top = 515.0
margin_right = 1298.0
margin_bottom = 745.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 4 )

[node name="MenuLabel" type="Label" parent="Sprite"]
modulate = Color( 0.541176, 0.113725, 0.615686, 1 )
margin_left = 753.0
margin_top = 528.0
margin_right = 848.0
margin_bottom = 595.0
custom_fonts/font = SubResource( 6 )
text = "MENU
"

[node name="Continuar" type="TextureButton" parent="Sprite"]
modulate = Color( 0.533333, 0.0862745, 0.870588, 1 )
self_modulate = Color( 0.941176, 0.34902, 0.34902, 1 )
margin_left = 850.0
margin_top = 615.0
margin_right = 1424.0
margin_bottom = 845.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 4 )

[node name="ContinuarLabel" type="Label" parent="Sprite"]
modulate = Color( 0.541176, 0.113725, 0.615686, 1 )
margin_left = 901.0
margin_top = 647.0
margin_right = 1024.0
margin_bottom = 706.0
custom_fonts/font = SubResource( 8 )
text = "CONTINUAR
"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[connection signal="value_changed" from="Sprite/Fondo/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Sprite/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Sprite/Continuar" to="." method="_on_Continuar_pressed"]
